# teton-code

./: .gitignore  Cargo.toml  LICENSE  README.md
.adlc/context/: architecture.md  conventions.md  project-overview.md  taxonomy.md
.adlc/knowledge/lessons/: LESSON-432-provenance-from-files-not-arg-name.md  LESSON-433-single-platform-verification-false-confidence.md  LESSON-441-fix-passes-introduce-regressions.md  LESSON-442-uncaught-exception-exit-code-collides.md  LESSON-443-guard-conditions-that-disable-themselves.md  LESSON-444-ffi-asserts-abort-guard-inputs-first.md  LESSON-445-stage-then-commit-after-authority-recheck.md  LESSON-446-token-budgets-must-share-a-currency.md  LESSON-447-fallbacks-must-preserve-the-guarded-invariant.md  LESSON-448-test-double-speed-masks-executor-blocking.md  LESSON-449-compose-intents-when-rebasing-parallel-fixes.md  LESSON-450-sync-e2e-on-state-not-the-event.md  LESSON-451-seams-share-the-production-commit-path.md
.adlc/partials/: id-alloc.sh  id-recheck.sh
.adlc/specs/REQ-544-teton-code-charter/: architecture.md  pipeline-state.json  requirement.md  review-findings.md
.adlc/specs/REQ-544-teton-code-charter/tasks/: TASK-001-cargo-workspace-ci.md  TASK-002-protocol-crate.md  TASK-003-core-domain-types.md  TASK-004-daemon-skeleton.md  TASK-005-provider-adapters.md  TASK-006-local-inference.md  TASK-007-privacy-egress.md  TASK-008-cost-ledger.md  TASK-009-agent-harness.md  TASK-010-router.md  TASK-011-mcp-client.md  TASK-012-cli.md  TASK-013-structured-mode.md  TASK-014-acceptance-suite.md
.adlc/specs/REQ-547-first-run-model-consent/: architecture.md  pipeline-state.json  requirement.md  review-findings.md
.adlc/specs/REQ-547-first-run-model-consent/tasks/: TASK-001-protocol-config-surface.md  TASK-002-download-client.md  TASK-003-real-catalog.md  TASK-004-consent-gate.md  TASK-005-preflight-atomic-install.md  TASK-006-catalog-integrity-check.md  TASK-007-cli-consent-model-commands.md  TASK-008-acceptance-suite.md  TASK-009-proposal-delivery-honest-lifecycle.md
.github/workflows/: ci.yml
crates/teton/: Cargo.toml
crates/teton-core/: Cargo.toml
crates/teton-core/src/: boundary.rs  config.rs  entities.rs  lib.rs  mcp.rs  phase.rs  policy.rs
crates/teton-inference/: Cargo.toml
crates/teton-inference/data/: models.toml
crates/teton-inference/src/: benchmark.rs  catalog.rs  download.rs  engine.rs  hash.rs  lib.rs  lifecycle.rs  pressure.rs  probe.rs
crates/teton-inference/tests/: catalog_integrity.rs  llama_smoke.rs  probe_table.rs
crates/teton-protocol/: Cargo.toml
crates/teton-protocol/src/: events.rs  handshake.rs  jsonrpc.rs  lib.rs  methods.rs  socket_path.rs  weights.rs
crates/teton-providers/: Cargo.toml
crates/teton-providers/src/: anthropic.rs  capability.rs  failure.rs  lib.rs  openai_compat.rs  sse.rs  transport.rs
crates/teton-providers/tests/: conformance.rs
crates/teton/src/: client.rs  cost_ui.rs  firstrun.rs  keychain.rs  main.rs  model_ui.rs  prompt.rs  render.rs  session_ui.rs  socket_path.rs
crates/teton/tests/: cli_e2e.rs
crates/tetond/: Cargo.toml
crates/tetond/data/: prices.toml
crates/tetond/src/: auth.rs  broadcast.rs  heuristics.rs  install.rs  keychain.rs  lib.rs  main.rs  model_consent.rs  router.rs  runtime.rs  selection_store.rs  server.rs  sessions.rs  single_instance.rs  socket_path.rs
crates/tetond/src/cost/: ledger.rs  mod.rs  prices.rs  report.rs
crates/tetond/src/download/: backoff.rs  mod.rs
crates/tetond/src/egress/: inspector.rs  mod.rs  provenance.rs
crates/tetond/src/harness/: completion.rs  context.rs  mod.rs  permissions.rs  turn_loop.rs
crates/tetond/src/harness/tools/: edit.rs  glob.rs  grep.rs  mcp.rs  mod.rs  read.rs  shell.rs
crates/tetond/src/mcp/: client.rs  mod.rs  registry.rs
crates/tetond/src/structured/: artifacts.rs  machine.rs  mod.rs  templates.rs
crates/tetond/src/structured/templates/: plan.md  requirement.md  task.md
crates/tetond/tests/: cost_attribution.rs  e2e.rs  egress_capture.rs  install_pipeline.rs  mcp_egress.rs  model_consent.rs  multi_client.rs  nonblocking_inference.rs  offline_session.rs  provenance_egress.rs  remote_loop.rs  routing.rs  structured_flow.rs  version.rs
crates/tetond/tests/e2e/: ac_matrix.rs  consent_matrix.rs  harness.rs  privacy_fixes.rs
crates/tetond/tests/e2e/fixtures/: catalog.toml
crates/tetond/tests/e2e/fixtures/demo_repo/: README.md
crates/tetond/tests/e2e/fixtures/demo_repo/secrets/: prod.env
crates/tetond/tests/e2e/fixtures/demo_repo/src/: lib.rs  main.rs
docs/: manual-verification.md  requirement-draft.md
tools/: refresh-catalog.py
