[package]
name = "teton-core"
description = "Router, session state, and cost ledger — pure logic, no I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# teton-core is the privacy/logic core: NO I/O dependencies (no tokio, no
# reqwest, no async runtime). Only pure-logic crates are allowed here so the
# routing and privacy-boundary logic stays trivially testable and cannot itself
# perform egress.
[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
globset = "0.4"

[lints]
workspace = true
