[package]
name = "teton-inference"
description = "Local inference: llama.cpp embedding, hardware probe, benchmark."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
