[package]
name = "teton-inference"
description = "Local inference: llama.cpp embedding, hardware probe, benchmark."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# NON-DEFAULT. Compiling the real llama.cpp binding (`llama-cpp-2`) builds
# llama.cpp from source and needs cmake. Default builds and CI ship only the
# `Engine` trait and `MockEngine`, so they never compile llama.cpp and never
# require cmake. Enable the real engine with `--features llama`.
llama = ["dep:llama-cpp-2"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"

# Real inference backend — optional, gated behind the `llama` feature above.
llama-cpp-2 = { version = "0.1.151", optional = true }

[lints]
workspace = true
