[package]
name = "teton-protocol"
description = "Client-daemon JSON-RPC protocol types (shared with clients)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
