[package]
name = "teton-providers"
description = "Provider adapters (Anthropic, OpenAI-compatible)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
