[package]
name = "tetond"
description = "Teton Code daemon — session state, routing, cost, egress, inference."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The daemon is where all differentiating logic lives, so it depends on every
# library crate. Binaries may depend on libs; libs never depend on binaries.
[dependencies]
teton-core = { path = "../teton-core" }
teton-protocol = { path = "../teton-protocol" }
teton-providers = { path = "../teton-providers" }
teton-inference = { path = "../teton-inference" }

# Async runtime + Unix-domain-socket transport (ADR-002). Only the features the
# daemon actually uses, to keep the binary lean (ADR-001).
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
] }
# JSON-RPC framing codec (serde derives live in teton-protocol; here we only
# serialize/deserialize the shared wire types and need the `Serialize` trait).
serde = "1"
serde_json = "1"
# anyhow at the binary edge; thiserror for typed daemon errors (conventions).
anyhow = "1"
thiserror = "2"
# Peer-credential (`getpeereid`) and single-instance (`flock`) syscalls.
libc = "0.2"

[dev-dependencies]
# Integration tests act as clients over the socket and need the test macro.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
] }
serde_json = "1"

[lints]
workspace = true
